code-gen/templates/customer-hub/region/ping-cloud/custom-resources/ext-ingresses.yaml
# NOTES:
# - This custom patch is not applied to the cluster by default,
#   adding this patch will expose admin services listed below
#   to the public.
#
# - Make sure WAF is enabled for all the public endpoints before
#   applying this patch.
#

# This defines the external ingress for the pingcentral service

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingcentral-ext-ingress
  namespace: ${PING_CLOUD_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-public
spec:
  tls:
  - hosts:
    - ext-pingcentral.${DNS_ZONE}
  rules:
  - host: ext-pingcentral.${DNS_ZONE}
    http:
      paths:
      - path: /
        backend:
          service:
            name: pingcentral
            port:
              number: 9022
